# dclient

./: .gitignore  Justfile  PLAN.md  README.md  demo.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
dclient/: cli.py  plugin.py  utils.py
demos/: exploring-writing.md
docs/: aliases.md  authentication.md  conf.py  defaults.md  environment.md  exploring.md  index.md  inserting.md  queries.md  writing.md
docs/_templates/: base.html
specs/: dclient-v2.md
tests/: test_alias_v2.py  test_cli_auth.py  test_commands_v2.py  test_config.py  test_create_table.py  test_datasette_plugin.py  test_dclient.py  test_env.py  test_insert.py  test_migration.py  test_new_commands.py  test_output_formats.py  test_query.py  test_rows.py  test_utils.py
