[project]
name = "dclient"
version = "0.5a2"
description = "A client CLI utility for Datasette instances"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "httpx",
    "sqlite-utils",
]

[project.urls]
Homepage = "https://github.com/simonw/dclient"
Issues = "https://github.com/simonw/dclient/issues"
CI = "https://github.com/simonw/dclient/actions"
Changelog = "https://github.com/simonw/dclient/releases"

[project.scripts]
dclient = "dclient.cli:cli"

[project.entry-points.datasette]
client = "dclient.plugin"

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "cogapp",
    "pytest-mock",
    "datasette>=1.0a25",
]
docs = [
    "furo",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "myst-parser",
    "cogapp",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
